<resources>
    <string name="app_name">My Application</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Login">Login</string>
    <string name="Create_Login">Create Account</string>
    <string name="message_location_permission">Location permission is needed to start using this app</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">Location settings</string>
    <string name="internet">Count bytes</string>
</resources>
