<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="75dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Username"
            android:maxLength="100" />


        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:maxLength="100" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="255dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/login_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="500dp" />

        <Button
            android:id="@+id/create_acc_button"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/Create_Login"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="600dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>